objects/ssot__CareProgramEnrollmentCard__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CardNumber__c</fullName>
        <label>Card Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareProgramEnrolleeId__c</fullName>
        <label>Care Program Enrollee</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareProgramEnrollmentCardStatus__c</fullName>
        <label>Care Program Enrollment Card Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Program Enrollment Card Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716666649415_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramEnrollmentCard_CareProgra_rel</label>
        <referenceTo>ssot__CareProgramEnrollee__dlm</referenceTo>
        <relationshipLabel>CareProgramEnrollmentCard_CareProgra_rel</relationshipLabel>
        <relationshipName>rel_1716666649415_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>